src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Country_Of_Issue__c</fullName>
        <defaultValue>&apos;India&apos;</defaultValue>
        <label>Country Of Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Country__c</fullName>
        <label>Current Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_State_Province__c</fullName>
        <label>Current State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Street__c</fullName>
        <label>Current Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Zip_Postal_Code__c</fullName>
        <label>Current Zip/Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employ_Id__c</fullName>
        <label>Employ Id</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Remarks__c</fullName>
        <label>Exit Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name_as_in_passport__c</fullName>
        <label>Full Name as in passport</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Taken__c</fullName>
        <label>Leave Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAN__c</fullName>
        <label>PAN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_City__c</fullName>
        <label>Permanent City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Country__c</fullName>
        <label>Permanent Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_State_Province__c</fullName>
        <label>Permanent State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Street__c</fullName>
        <label>Permanent Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permanent_Zip_Postal_C__c</fullName>
        <label>Permanent Zip/Postal Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Id__c</fullName>
        <label>Personal Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Place_of_Issue__c</fullName>
        <label>Place of Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Leave__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Leave Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Extentor_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Extentor</value>
        </filters>
        <label>Extentor Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>Lead_00N900000040Sc5EAE</fullName>
        <active>false</active>
        <field>Lead.Inside_Sales_Person_Name__c</field>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Inside Sales</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Lead_Contact</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00N900000040ScoEAE</fullName>
        <active>true</active>
        <field>Lead.Extentor_SalesRep__c</field>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>0019000000G0snq</value>
        </filterItems>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Sales Rep</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_Extentor SalesRep</name>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00N90000004dpuaEAA</fullName>
        <active>true</active>
        <field>Lead.Salesforce_AE__c</field>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Salesforce AE</value>
        </filterItems>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Salesforce AE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_Salesforce AE</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00N900000041CsAEAU</fullName>
        <active>false</active>
        <field>Opportunity.Extentor_SalesRep__c</field>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <value>0019000000FSJ11</value>
        </filterItems>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Sales Rep</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_Extentor SalesRep</name>
        <sourceObject>Opportunity</sourceObject>
    </namedFilters>
    <recordTypes>
        <fullName>Extentor</fullName>
        <active>true</active>
        <label>Extentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <validationRules>
        <fullName>Validation_on_Date_of_Joining</fullName>
        <active>false</active>
        <description>If account is &apos;Extentor &apos; , date of joining cannot be empty</description>
        <errorConditionFormula>AND(   Account.Name =&apos;Extentor&apos;, ISBLANK( Date_of_Joining__c )    )</errorConditionFormula>
        <errorMessage>Date of Joining  is  a required field</errorMessage>
    </validationRules>
</CustomObject>